--- a/TMDB/Scense/ListActors/ListActorsViewController.xib
+++ b/TMDB/Scense/ListActors/ListActorsViewController.xib
@@ -1,22 +1,76 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListActorsViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListActorsViewController" customModule="TMDB" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9KQ-Jb-qQv">
+                    <rect key="frame" x="0.0" y="66" width="414" height="796"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nzk-tQ-d70">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <subviews>
+                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ktr-Jf-kzL">
+                                    <rect key="frame" x="8" y="232" width="240" height="128"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <viewLayoutGuide key="contentLayoutGuide" id="Yrp-Zz-ni7"/>
+                                    <viewLayoutGuide key="frameLayoutGuide" id="95J-ck-o0I"/>
+                                </scrollView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </view>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G92-VU-AwO">
+                            <rect key="frame" x="10" y="10" width="394" height="200"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="200" id="wM0-Ys-wSv"/>
+                            </constraints>
+                            <string key="text">Label
+
+
+sdas</string>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="J65-rr-lQc" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="G92-VU-AwO" secondAttribute="bottom" constant="20" id="HXL-jV-H8W"/>
+                        <constraint firstAttribute="bottom" secondItem="nzk-tQ-d70" secondAttribute="bottom" id="Hab-TJ-mXB"/>
+                        <constraint firstItem="N3G-SM-fIu" firstAttribute="trailing" secondItem="G92-VU-AwO" secondAttribute="trailing" constant="10" id="Xkc-Dx-fmw"/>
+                        <constraint firstItem="G92-VU-AwO" firstAttribute="leading" secondItem="N3G-SM-fIu" secondAttribute="leading" constant="10" id="Yc9-tH-YId"/>
+                        <constraint firstItem="G92-VU-AwO" firstAttribute="top" secondItem="N3G-SM-fIu" secondAttribute="top" constant="10" id="exc-6G-4kc"/>
+                        <constraint firstItem="nzk-tQ-d70" firstAttribute="top" secondItem="9KQ-Jb-qQv" secondAttribute="top" id="fkO-J6-mj3"/>
+                        <constraint firstAttribute="trailing" secondItem="nzk-tQ-d70" secondAttribute="trailing" id="m4w-E4-rnD"/>
+                        <constraint firstItem="nzk-tQ-d70" firstAttribute="leading" secondItem="9KQ-Jb-qQv" secondAttribute="leading" id="teR-F2-r0Z"/>
+                    </constraints>
+                    <viewLayoutGuide key="contentLayoutGuide" id="N3G-SM-fIu"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="J65-rr-lQc"/>
+                </scrollView>
+            </subviews>
+            <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="9KQ-Jb-qQv" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="H6h-e5-bGe"/>
+                <constraint firstItem="nzk-tQ-d70" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="NmF-bX-dF5"/>
+                <constraint firstItem="9KQ-Jb-qQv" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="22" id="hjs-xT-B3h"/>
+                <constraint firstItem="9KQ-Jb-qQv" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="tir-lI-AeM"/>
+                <constraint firstItem="9KQ-Jb-qQv" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="zli-l4-cpZ"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="137.68115942028987" y="668.30357142857144"/>
         </view>
     </objects>
 </document>
